# solakon-one-homeassistant

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTITY_DOCUMENTATION.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: IMPLEMENTATION_SUMMARY.md  LABELS_SETUP.md  labels.yml
.github/workflows/: build.yaml  format.yaml  hacs.yaml  hassfest.yaml  homeassistant.yaml  lint.yaml  release.yml  ruff.yaml  type.yaml  update-version.yaml
custom_components/solakon_one/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  icons.json  ir_meter.py  manifest.json  modbus.py  number.py  quality_scale.yaml  remote_control.py  select.py  sensor.py  types.py  utils.py
custom_components/solakon_one/translations/: de.json  en.json
