[project]
name = "solakon-one-homeassistant"
version = "1.4.1"
description = "Home Assistant custom component for Solakon ONE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant==2025.7.0",
]

[dependency-groups]
dev = [
    "homeassistant-stubs==2025.7.0",
]
